plugins {
    id 'org.springframework.boot' version '3.0.2'
    id 'io.spring.dependency-management' version '1.1.0'
    id 'com.diffplug.spotless' version '6.15.0'
    id 'org.sonarqube' version '3.5.0.2730'
    id 'jacoco'
    id 'java'
    id 'application'
    id 'eclipse'
}

def ENABLE_PREVIEW = '--enable-preview'

java {
    sourceCompatibility = '17'
    targetCompatibility = '17'
}



dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-tomcat'
    implementation 'software.amazon.awssdk:s3:2.20.9'
    implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.0.2'
    implementation 'com.itextpdf:itext7-core:7.2.5'
    implementation 'com.github.ben-manes.caffeine:caffeine:3.1.3'
    runtimeOnly 'org.glassfish.jaxb:jaxb-runtime:4.0.2'
    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
    generatedImplementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.0'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.projectreactor:reactor-test'
    testImplementation 'org.apache.pdfbox:pdfbox:2.0.27'
    testImplementation 'com.github.tomakehurst:wiremock-jre8-standalone:2.35.0'
}

